--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "date-fns": "^2.0.1",
     "react": "^16.8.6",
     "react-day-picker": "^7.3.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-medium-image-zoom": "^3.1.1",
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
